# OpenHantek6022

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  .travis_inactive.yml  CHANGELOG  CMakeLists.txt  CMakeListsMSVC.txt  CODE_OF_CONDUCT  Doxyfile  LICENSE  LinuxBuild  LinuxSetup_AsRoot  README  README.md  appveyor.yml  readme.md
cmake/: .gitattributes  (+14 more)
dsoextractfw/: 90-hantek-dso.rules  AUTHORS  ChangeLog  INSTALL  Makefile.in  README  configure  configure.in  dsoextractfw.c
firmware/: 60-hantek.rules  90-hantek.rules  CMakeLists.txt  README.md  dso2250x86-firmware.hex  dso6022be-firmware.hex  extractfw.c  fwget.sh
firmware/extractfw/: .gitignore  Makefile
openhantek/: .clang-format  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Doxyfile.bak  INSTALL  OpenHantek.pro  README  mainpage.dox  readme.md  roadmap.dox
openhantek-extractfw/: 90-hantek-dso.rules.in  90-hantek.rules.in  ChangeLog  INSTALL  Makefile.am  configure.in  extractfw.c  fwget.sh
openhantek/res/: CMakeLists.txt  OpenHantek.rc  application.qrc  configdialog.qrc  firmwares.qrc  translations.qrc
openhantek/res/firmware/: dds120-firmware.hex  dso2090x86-firmware.hex  dso2150x86-firmware.hex  dso5200ax86-firmware.hex  dso5200x86-firmware.hex  dso6021-firmware.hex  dso6022be-firmware.hex  dso6022bl-firmware.hex  dso602x_fw_version.h  isds205b-firmware.hex  mdso-firmware.hex
openhantek/res/images/: OpenHantek.icns  openhantek.icns
openhantek/res/translations/: 1.LUPDATE.sh  2.LINGUIST.sh  3.LRELEASE.sh  Translation_HowTo.md  openhantek_de.qm  openhantek_de.ts  openhantek_fr.ts  openhantek_pt.qm  openhantek_pt.ts  translations.pro  translations.qrc
openhantek/src/: OH_BUILD.h  OH_COMMIT.h  OH_VERSION.h  colorbox.cpp  colorbox.h  configdialog.cpp  configdialog.h  configpages.cpp  configpages.h  constants.h  dataanalyzer.cpp  dataanalyzer.h  dockwindows.cpp  dockwindows.h  documents.h  dso.cpp  dso.h  dsocontrol.cpp  dsocontrol.h  dsosettings.cpp  dsosettings.h  dsowidget.cpp  dsowidget.h  exporter.cpp  exporter.h  glgenerator.cpp  glgenerator.h  glscope.cpp  glscope.h  glscopegraph.cpp  glscopegraph.h  helper.cpp  helper.h  levelslider.cpp  levelslider.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openhantek.cpp  (+8 more)
openhantek/src/analyse/: dataanalyzer.cpp  dataanalyzer.h  dataanalyzerresult.cpp  dataanalyzerresult.h  enums.cpp  enums.h
openhantek/src/configdialog/: DsoConfigAnalysisPage.cpp  DsoConfigAnalysisPage.h  DsoConfigColorsPage.cpp  DsoConfigColorsPage.h  DsoConfigFilePage.cpp  DsoConfigFilePage.h  DsoConfigFilesPage.cpp  DsoConfigFilesPage.h  DsoConfigScopePage.cpp  DsoConfigScopePage.h  DsoConfigSpectrumPage.cpp  DsoConfigSpectrumPage.h  configdialog.cpp  configdialog.h
openhantek/src/docks/: HorizontalDock.cpp  HorizontalDock.h  SpectrumDock.cpp  SpectrumDock.h  TriggerDock.cpp  TriggerDock.h  VoltageDock.cpp  VoltageDock.h  dockconstants.h  dockwindows.cpp  dockwindows.h
openhantek/src/exporting/: exportcsv.cpp  exportcsv.h  exporter.cpp  exporter.h  exporterdata.cpp  exporterdata.h  exporterinterface.cpp  exporterinterface.h  exporterprocessor.cpp  exporterprocessor.h  exporterregistry.cpp  exporterregistry.h  exportimage.cpp  exportimage.h  exportjson.cpp  exportjson.h  exportprint.cpp  exportprint.h  exportsettings.h  legacyexportdrawer.cpp  legacyexportdrawer.h  readme.md
openhantek/src/hantek/: bulkStructs.cpp  bulkStructs.h  control.cpp  control.h  controlStructs.cpp  controlStructs.h  controlbegin.cpp  controlbegin.h  controlsettings.h  controlspecification.h  definitions.h  device.cpp  device.h  dsosamples.h  hantekdsocontrol.cpp  hantekdsocontrol.h  models.h  stateStructs.h  states.h  types.cpp  types.h
openhantek/src/hantekdso/: capturing.cpp  capturing.h  controlindexes.h  controlsettings.cpp  controlsettings.h  controlspecification.cpp  controlspecification.h  dsomodel.cpp  dsomodel.h  dsosamples.h  enums.cpp  enums.h  errorcodes.h  hantekdsocontrol.cpp  hantekdsocontrol.h  mathchannel.cpp  mathchannel.h  mathmodes.cpp  mathmodes.h  mathmodesettings.cpp.old  modelregistry.cpp  modelregistry.h  models.h  readme.md  softwaretrigger.cpp  softwaretrigger.h  softwaretriggersettings.h  states.h  triggering.cpp  triggering.h
openhantek/src/hantekprotocol/: bulkStructs.cpp  bulkStructs.h  bulkcode.h  bulkcommand.cpp  bulkcommand.h  controlStructs.cpp  controlStructs.h  controlcode.h  controlcommand.cpp  controlcommand.h  controlvalue.h  definitions.h  readme.md  types.h
openhantek/src/iconfont/: QtAwesome.cpp  QtAwesome.h  QtAwesomeAnim.cpp  QtAwesomeAnim.h
openhantek/src/post/: analysissettings.cpp  analysissettings.h  enums.h  graphgenerator.cpp  graphgenerator.h  mathchannelgenerator.cpp  mathchannelgenerator.h  postprocessing.cpp  postprocessing.h  postprocessingsettings.cpp  postprocessingsettings.h  ppresult.cpp  ppresult.h  processor.cpp  processor.h  readme.md  sinc.cpp  softwaretrigger.cpp  softwaretrigger.h  spectrumgenerator.cpp  spectrumgenerator.h  triggering.cpp  triggering.h
openhantek/src/selectdevice/: devicelistentry.h  deviceslistmodel.cpp  deviceslistmodel.h  newdevicemodelfromexisting.cpp  newdevicemodelfromexisting.h  newdevicemodelfromexisting.ui  rawdevicelistentry.h  rawdeviceslistmodel.cpp  rawdeviceslistmodel.h  selectdevice.cpp  selectdevice.h  selectsupporteddevice.cpp  selectsupporteddevice.h  selectsupporteddevice.ui
openhantek/src/usb/: bulkcommand.cpp  bulkcommand.h  controlbegin.cpp  controlbegin.h  controlcommand.cpp  controlcommand.h  controlgetspeed.cpp  controlgetspeed.h  dataarray.cpp  dataarray.h  ezusb.cpp  ezusb.h  finddevices.cpp  finddevices.h  readme.md  scopedevice.cpp  scopedevice.h  uploadFirmware.cpp  uploadFirmware.h  usbdevice.cpp  usbdevice.h  usbdevicedefinitions.h
openhantek/translations/: CMakeLists.txt  Translation_HowTo.md  Translations.cmake  openhantek_de.qm  openhantek_de.ts  openhantek_es.ts  openhantek_fr.ts  openhantek_it.ts  openhantek_pl.ts  openhantek_pt.ts  openhantek_ru.ts  openhantek_sv.ts  openhantek_zh.ts  translations.qrc  translations.qrc.template
(+95 files in other folders)
