AC_INIT([dsoextract], [0.6.2], [oliver.haag@gmail.com])
AC_CONFIG_SRCDIR([dsoextractfw.c])

# Generates a config.h
#AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([bfd], [main], [], AC_MSG_ERROR([The bfd library is missing]))

# Checks for header files.
AC_CHECK_HEADERS([malloc.h string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
